# ContextLens

./: .env.example  .gitignore  CLAUDE.md  PRODUCT_OVERVIEW.md  README.md  build-log.md  docker-compose.yml
backend/: Dockerfile  celerybeat-schedule  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  redis.py
contextlens-core/: README.md  build-log.md  demo.py  main.py  requirements.txt
contextlens-core/contextlens/: attributor.py  decomposer.py  embedder.py  formatter.py  judge.py  pipeline.py
docs/: API.md  ARCHITECTURE.md  AUTH.md  BUILD_ORDER.md  CLOUD_FUTURE.md  DASHBOARD.md  DATA_MODEL.md  DECISIONS.md  METERING.md  PIPELINE.md  README.md  SDK.md  STACK.md
docs-site/: package-lock.json  package.json  vercel.json
docs-site/.vitepress/: config.ts
docs/archive/: PRODUCT_OVERVIEW.md  README.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/components/: api-key-create-modal.tsx  claim-card.tsx  confirm-dialog.tsx  empty-state.tsx  failure-type-badge.tsx  nav-sidebar.tsx  trace-filters.tsx  trace-list-table.tsx  verdict-badge.tsx
frontend/lib/: api.ts  types.ts  utils.ts
landing/: index.html
mini-rag-app/: .env.example  app.py  generator.py  ingest_corpus.py  retriever.py  run_queries.py
mini-rag-app/documents/: account-deletion.md  (+7 more)
sdk/: pyproject.toml
sdk-validation/: .env.example  test_manual_pattern.py  test_normalizers.py
sdk/contextlens/: __init__.py  client.py  config.py  context.py  exceptions.py  normalizers.py  stats.py
(+38 files in other folders)
