[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextlens"
version = "0.1.0"
description = "Self-hosted RAG attribution and faithfulness observability"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["contextlens*"]
